source/stylesheets/layout/_navbar.css.scss
@import "../config/_variables.css.scss";
/*-----------------------------------------------------------------------
*BOX MODEL
*------------------------------------------------------------------------*/
$navbar-height: 70px;
$navbar-blue: #34496F;



/*-----------------------------------------------------------------------
*SCSS
*------------------------------------------------------------------------*/
@media (max-width: 952px) {
    .navbar-header {
        float: none;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
        overflow: hidden !important;
    }
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-collapse.collapse.in {
        display: block!important;
    }
    .navbar-collapse *[class*='navbar-'] {
        float: none!important;
        margin: 7.5px -15px;
    }
    .navbar-nav > li {
        float: none;
    }
    .navbar-nav > li > a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
}           

.navbar-transparent {
  height: $navbar-height;
  background-color: $navbar-blue;
  opacity: 0.8;
}

.navbar .navbar-brand {
  font-family: $title-font;
  font-size: 40px;
  padding-left: 30px;
}

.navbar .navbar-nav {
  font-family: $title-font;
  font-size: 30px;
}

.navbar-collapse {
  background-color: $navbar-blue;
}

.navbar-transparent .navbar-brand {
  color: white;
  line-height: 40px;
  margin-top: 0px;
  padding-right: 30px;
  -webkit-transition: 0.2s linear;
  transition: 0.2s linear;
  &:hover {
    color: white;
    font-size: 50px;
    transform: rotate(5deg);
  }
}

.navbar-transparent .navbar-nav > li > a{
      color: white;
      line-height: 40px;
      margin-top: -1px;
      padding-right: 30px;
      -webkit-transition: 0.2s linear;
      transition: 0.2s linear;
      &:hover {
        color: white;
        font-size: 38px;
      }
    }

.france-flag {
  position: absolute;
  margin-top: 20px;
  margin-left: auto;
  width: 30px;
  height: 30px;
  -webkit-transition: 0.1s linear;
  transition: 0.1s linear;
  &:hover {
    width: 34px;
    height: 34px;
  }
}

.england-flag {
  position: absolute;
  margin-top: 20px;
  margin-left: 50px;
  width: 30px;
  height: 30px;
  -webkit-transition: 0.1s linear;
  transition: 0.1s linear;
  &:hover {
    width: 34px;
    height: 34px;
  }
}


.facebook-logo {
  position: absolute;
  margin-top: 20px;
  width: 30px;
  height: 30px;
  @media (max-width: 1049px) {
    margin-left: 100px;
  }
  @media (min-width: 1050px) {
    margin-left: 200px;
  }
  -webkit-transition: 0.1s linear;
  transition: 0.1s linear;
  &:hover {
    width: 34px;
    height: 34px;
  }
}

.instagram-logo {
  position: absolute;
  margin-top: 20px;
  width: 30px;
  height: 30px;
  @media (max-width: 1049px) {
    margin-left: 150px;
  }
  @media (min-width: 1050px) {
    margin-left: 250px;
  }
  -webkit-transition: 0.1s linear;
  transition: 0.1s linear;
  &:hover {
    width: 34px;
    height: 34px;
  }
}

